--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.6",
+    "magic-sdk": "^8.1.1",
+    "moralis": "^1.8.1",
     "next": "12.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-moralis": "^1.4.0",
+    "web3uikit": "^0.1.162"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
